--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de Gastos</title>
+    <title>Gestor de Gastos Cristian</title>
     <link rel="stylesheet" href="estilos/styles.css">
 </head>
 <body>
