--- a/public/rubros.html
+++ b/public/rubros.html
@@ -1,12 +1,26 @@
 <!-- public/rubros.html -->
 <div class="container">
-    <h2>Rubros</h2>
-    <div class="mb-3">
-        <label for="nombreRubro" class="form-label">Nombre del Rubro</label>
-        <input type="text" class="form-control" id="nombreRubro" name="nombreRubro">
-    </div>
-    <button id="agregarRubro" class="btn btn-primary">Agregar Rubro</button>
-    <div id="listaRubros" class="mt-3">
-        <!-- Aquí se mostrará la lista de rubros -->
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <h2>Rubros</h2>
+            <div class="mb-3">
+                <label for="nombreRubro" class="form-label">Nombre del Rubro</label>
+                <input type="text" class="form-control" id="nombreRubro" name="nombreRubro">
+            </div>
+            <button id="agregarRubro" class="btn btn-primary">Agregar Rubro</button>
+            <!-- Formulario oculto para editar -->
+            <div id="editarRubroForm" style="display: none;" class="mt-3">
+                <h3>Editar Rubro</h3>
+                <div class="mb-3">
+                    <label for="editarNombreRubro" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="editarNombreRubro" name="editarNombreRubro">
+                </div>
+                <button id="guardarRubro" class="btn btn-primary">Guardar Cambios</button>
+                <button id="cancelarEditarRubro" class="btn btn-secondary">Cancelar</button>
+            </div>
+            <div id="listaRubros" class="mt-3">
+                <!-- Aquí se mostrará la lista de rubros -->
+            </div>
+        </div>
     </div>
 </div>
