--- a/public/conceptos.html
+++ b/public/conceptos.html
@@ -1,12 +1,60 @@
 <!-- public/conceptos.html -->
 <div class="container">
-    <h2>Conceptos</h2>
-    <div class="mb-3">
-        <label for="nombreConcepto" class="form-label">Nombre del Concepto</label>
-        <input type="text" class="form-control" id="nombreConcepto" name="nombreConcepto">
-    </div>
-    <button id="agregarConcepto" class="btn btn-primary">Agregar Concepto</button>
-    <div id="listaConceptos" class="mt-3">
-        <!-- Aquí se mostrará la lista de conceptos -->
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <h2>Conceptos</h2>
+            <div class="mb-3">
+                <label for="nombreConcepto" class="form-label">Nombre del Concepto</label>
+                <input type="text" class="form-control" id="nombreConcepto" name="nombreConcepto" required>
+            </div>
+            <div class="mb-3">
+                <label for="rubroConcepto" class="form-label">Rubro</label>
+                <select class="form-select" id="rubroConcepto" name="rubroConcepto" required>
+                    <!-- Opciones de rubro se cargarán aquí dinámicamente -->
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="tipoConcepto" class="form-label">Tipo de Movimiento</label>
+                <select class="form-select" id="tipoConcepto" name="tipoConcepto" required>
+                    <option value="egreso">Egreso</option>
+                    <option value="ingreso">Ingreso</option>
+                </select>
+            </div>
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="requiereVencimientoConcepto" name="requiereVencimientoConcepto">
+                <label class="form-check-label" for="requiereVencimientoConcepto">Requiere Fecha de Vencimiento</label>
+            </div>
+            <button id="agregarConcepto" class="btn btn-primary">Agregar Concepto</button>
+            <!-- Formulario oculto para editar -->
+            <div id="editarConceptoForm" style="display: none;" class="mt-3">
+                <h3>Editar Concepto</h3>
+                <div class="mb-3">
+                    <label for="editarNombreConcepto" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="editarNombreConcepto" name="editarNombreConcepto">
+                </div>
+                <div class="mb-3">
+                    <label for="editarRubroConcepto" class="form-label">Rubro</label>
+                    <select class="form-select" id="editarRubroConcepto" name="editarRubroConcepto" required>
+                        <!-- Opciones de rubro se cargarán aquí dinámicamente -->
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="editarTipoConcepto" class="form-label">Tipo de Movimiento</label>
+                    <select class="form-select" id="editarTipoConcepto" name="editarTipoConcepto" required>
+                        <option value="egreso">Egreso</option>
+                        <option value="ingreso">Ingreso</option>
+                    </select>
+                </div>
+                <div class="form-check mb-3">
+                    <input class="form-check-input" type="checkbox" id="editarRequiereVencimientoConcepto" name="editarRequiereVencimientoConcepto">
+                    <label class="form-check-label" for="editarRequiereVencimientoConcepto">Requiere Fecha de Vencimiento</label>
+                </div>
+                <button id="guardarConcepto" class="btn btn-primary">Guardar Cambios</button>
+                <button id="cancelarEditarConcepto" class="btn btn-secondary">Cancelar</button>
+            </div>
+            <div id="listaConceptos" class="mt-3">
+                <!-- Aquí se mostrará la lista de conceptos -->
+            </div>
+        </div>
     </div>
 </div>
