--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,50 +1,44 @@
+<!-- public/dashboard.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Gastos - Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">Gestión de Gastos</a>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Gastos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="rubrosLink">Rubros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="conceptosLink">Conceptos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="gastosLink">Gastos</a>
-                    </li>
-                </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Usuario
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                            <li><a class="dropdown-item" href="#" id="logoutLink">Cerrar Sesión</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" id="rubrosLink" href="#">Rubros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="conceptosLink" href="#">Conceptos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="gastosLink" href="#">Gastos</a>
+                    </li>
+                    <li class="nav-item">
+                         <a class="nav-link" id="listadoGastosLink" href="#">Listado de Gastos</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" id="logoutLink" href="#">Logout</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container mt-4" id="mainContent">
-        <!-- Aquí se cargará el contenido dinámicamente -->
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/app.js"></script>
+    <div id="mainContent" class="container"></div>
+    <script type="module" src="js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
