--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,6 @@
             </div>
         </div>
     </div>
-    <script src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
