--- a/public/gastos.html
+++ b/public/gastos.html
@@ -1,52 +1,87 @@
-<!-- public/gastos.html -->
 <div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <h2>Gastos</h2>
-             <form id="agregarGastoForm">
-                <div class="mb-3">
-                     <label for="montoGasto" class="form-label">Monto</label>
-                      <input type="number" class="form-control" id="montoGasto" name="montoGasto" step="0.01" required>
-                </div>
-                <div class="mb-3">
-                     <label for="mesGasto" class="form-label">Mes</label>
-                    <select class="form-select" id="mesGasto" name="mesGasto" required>
-                        <option value="">Seleccione un mes</option>
-                        <option value="1">Enero</option>
-                        <option value="2">Febrero</option>
-                        <option value="3">Marzo</option>
-                        <option value="4">Abril</option>
-                        <option value="5">Mayo</option>
-                        <option value="6">Junio</option>
-                        <option value="7">Julio</option>
-                        <option value="8">Agosto</option>
-                        <option value="9">Septiembre</option>
-                        <option value="10">Octubre</option>
-                        <option value="11">Noviembre</option>
-                        <option value="12">Diciembre</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                     <label for="anioGasto" class="form-label">Año</label>
-                    <input type="number" class="form-control" id="anioGasto" name="anioGasto" required>
-                </div>
-                <div class="mb-3">
-                    <label for="conceptoGasto" class="form-label">Concepto</label>
-                    <select class="form-select" id="conceptoGasto" name="conceptoGasto" required>
-                        <option value="">Seleccione un concepto</option>
-                        <!-- Opciones de concepto se cargarán aquí dinámicamente -->
-                    </select>
-                </div>
-                <div class="mb-3" id="fechaVencimientoDiv" style="display: none;">
-                    <label for="fechaVencimientoGasto" class="form-label">Fecha Vencimiento</label>
-                    <input type="date" class="form-control" id="fechaVencimientoGasto" name="fechaVencimientoGasto">
-                </div>
-                <p id="tipoConceptoTexto"></p>
-                <button type="submit" class="btn btn-primary">Agregar Gasto</button>
-            </form>
+    <h2>Gastos</h2>
+    <!-- Formulario para agregar un nuevo gasto -->
+    <form id="agregarGastoForm">
+        <div class="mb-3">
+            <label for="montoGasto" class="form-label">Monto</label>
+            <input type="number" class="form-control" id="montoGasto" name="montoGasto" required>
         </div>
-    </div>
-    <div id="listaGastos" class="mt-3">
-        <!-- Aquí se mostrará la lista de gastos -->
-    </div>
+        <div class="mb-3">
+            <label for="conceptoGasto" class="form-label">Concepto</label>
+            <select class="form-select" id="conceptoGasto" name="conceptoGasto" required>
+                <!-- Opciones de conceptos se cargarán aquí dinámicamente -->
+            </select>
+            <!--Se muestra el tipo de concepto(ingreso/egreso)-->
+            <p id="tipoConceptoTexto"></p>
+        </div>
+        <div class="mb-3" id="fechaVencimientoDiv" style="display: none;">
+            <label for="fechaVencimientoGasto" class="form-label">Fecha de Vencimiento</label>
+            <input type="date" class="form-control" id="fechaVencimientoGasto" name="fechaVencimientoGasto">
+        </div>
+        <div class="mb-3">
+            <label for="mesGasto" class="form-label">Mes</label>
+            <select class="form-select" id="mesGasto" name="mesGasto" required>
+                <option value="1">Enero</option>
+                <option value="2">Febrero</option>
+                <option value="3">Marzo</option>
+                <option value="4">Abril</option>
+                <option value="5">Mayo</option>
+                <option value="6">Junio</option>
+                <option value="7">Julio</option>
+                <option value="8">Agosto</option>
+                <option value="9">Septiembre</option>
+                <option value="10">Octubre</option>
+                <option value="11">Noviembre</option>
+                <option value="12">Diciembre</option>
+            </select>
+        </div>
+        <div class="mb-3">
+            <label for="anioGasto" class="form-label">Año</label>
+            <input type="number" class="form-control" id="anioGasto" name="anioGasto" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Agregar Gasto</button>
+    </form>
+    <!-- Formulario para editar un gasto -->
+    <form id="editarGastoForm" style="display: none;">
+        <input type="hidden" id="editarGastoId" name="editarGastoId">
+        <div class="mb-3">
+            <label for="editarMontoGasto" class="form-label">Monto</label>
+            <input type="number" class="form-control" id="editarMontoGasto" name="editarMontoGasto" required>
+        </div>
+        <div class="mb-3">
+            <label for="editarConceptoGasto" class="form-label">Concepto</label>
+            <select class="form-select" id="editarConceptoGasto" name="editarConceptoGasto" required>
+                <!-- Opciones de conceptos se cargarán aquí dinámicamente -->
+            </select>
+            <!--Se muestra el tipo de concepto(ingreso/egreso)-->
+            <p id="editarTipoConceptoTexto"></p>
+        </div>
+        <div class="mb-3" id="editarFechaVencimientoDiv" style="display: none;">
+            <label for="editarFechaVencimientoGasto" class="form-label">Fecha de Vencimiento</label>
+            <input type="date" class="form-control" id="editarFechaVencimientoGasto" name="editarFechaVencimientoGasto">
+        </div>
+        <div class="mb-3">
+            <label for="editarMesGasto" class="form-label">Mes</label>
+              <select class="form-select" id="editarMesGasto" name="editarMesGasto" required>
+                <option value="1">Enero</option>
+                <option value="2">Febrero</option>
+                <option value="3">Marzo</option>
+                <option value="4">Abril</option>
+                <option value="5">Mayo</option>
+                <option value="6">Junio</option>
+                <option value="7">Julio</option>
+                <option value="8">Agosto</option>
+                <option value="9">Septiembre</option>
+                <option value="10">Octubre</option>
+                <option value="11">Noviembre</option>
+                <option value="12">Diciembre</option>
+            </select>
+        </div>
+        <div class="mb-3">
+            <label for="editarAnioGasto" class="form-label">Año</label>
+            <input type="number" class="form-control" id="editarAnioGasto" name="editarAnioGasto" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Editar Gasto</button>
+        <button type="button" class="btn btn-secondary" id="cancelarEditarGasto">Cancelar</button>
+    </form>
 </div>
